feat: add auto dark theme
For https://github.com/liammulh/lemur.css/issues/6.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </nav>
 <h1>Heading 1</h1>
 <p>
+  Here's a <a href="https://google.com">link to Google</a>.
+</p>
+<p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent interdum volutpat mattis. Curabitur porta et erat
   quis interdum. Integer vestibulum facilisis sagittis. In finibus a diam sit amet placerat. Vivamus maximus sagittis
   aliquet. Vivamus libero dui, gravida sit amet porttitor eget, finibus id enim. Pellentesque habitant morbi tristique
